IDE: add nodejs as a new dependency to Dockerfile
It is required for the yaml static analyzer to work properly.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM mcr.microsoft.com/vscode/devcontainers/base:jammy@sha256:58455121a1914fc23fa3440ef505e63776b889b667245c00de3ab3176be07ab7
 
-# ** [Optional] Uncomment this section to install additional packages. **
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
            build-essential=* libssl-dev=* zlib1g-dev=* libgmp-dev=* libpcap-dev=* libbz2-dev=* \
@@ -10,11 +10,9 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
            gdb=* cpio=* pre-commit=* \
            libpocl-dev=* ocl-icd-opencl-dev=* pocl-opencl-icd=* \
            golang=* shellcheck=* \
-    #wget -q http://registrationcenter-download.intel.com/akdlm/irc_nas/vcp/13793/l_opencl_p_18.1.0.013.tgz -O /tmp/opencl_runtime.tgz && \
-    #tar -xzf /tmp/opencl_runtime.tgz -C /tmp && \
-    #sed 's/decline/accept/g' -i /tmp/l_opencl_p_18.1.0.013/silent.cfg && \
-    #/tmp/l_opencl_p_18.1.0.013/install.sh -s /tmp/l_opencl_p_18.1.0.013/silent.cfg \
     #
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get -y install --no-install-recommends nodejs=* \
     # Clean up-
     && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
