--- a/deploy/Android-Delivery.yml
+++ b/deploy/Android-Delivery.yml
@@ -73,11 +73,11 @@ workflows:
               echo "Build options: $BUILD_OPTS"
               echo "----------------------------------------------------------------------"
 
-              wget https://raw.githubusercontent.com/openwall/john-packages/release/tests/ci_controler.sh -O .ci/ci_controler.sh
-              chmod +x .ci/ci_controler.sh
+              wget https://raw.githubusercontent.com/openwall/john-packages/release/tests/ci_controller.sh -O .ci/ci_controller.sh
+              chmod +x .ci/ci_controller.sh
 
-              .ci/ci_controler.sh $TARGET_ARCH BUILD
-              .ci/ci_controler.sh $TARGET_ARCH TEST
+              .ci/ci_controller.sh $TARGET_ARCH BUILD
+              .ci/ci_controller.sh $TARGET_ARCH TEST
 
               mkdir -p "${BITRISE_DEPLOY_DIR}/${default_apk_name}/"
               mv README.md "${BITRISE_DEPLOY_DIR}/${default_apk_name}/"
