--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -17,7 +17,7 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# Github Action to build John the Ripper's CPU Docker image
+# GitHub Action to build John the Ripper's CPU Docker image
 # More info at https://github.com/openwall/john-packages
 
 ---
