--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# Github Action to build John the Ripper's Docker image
+# GitHub Action to build John the Ripper's Docker image
 # More info at https://github.com/openwall/john-packages
 
 ---
@@ -155,7 +155,7 @@ jobs:
     if: ${{ github.event.inputs.push == 'true' }}
     needs: [build]
     permissions:
-      actions: read # for detecting the Github Actions environment.
+      actions: read # for detecting the GitHub Actions environment.
       id-token: write # for creating OIDC tokens for signing.
       packages: write # for uploading attestations.
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.9.0
