--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,7 +17,7 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# Github Action to run some linters
+# GitHub Action to run some linters
 # More info at https://github.com/openwall/john-packages
 
 ---
