--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -63,7 +63,12 @@ jobs:
     - name: Harden Runner
       uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
       with:
-        egress-policy: audit
+        egress-policy: block
+        allowed-endpoints: >
+          api.github.com:443
+          azure.archive.ubuntu.com:80
+          github.com:443
+          raw.githubusercontent.com:443
 
     - name: check-spelling
       id: spelling
