chore: unleash v1.9.1-ce (202502) release (#711)
This is a bugfix, renovate, and update release intended to provide a
modernized version to end users and packagers.

News:
- it is called version `1.9.1-ce` or `v1.9.1-ce` (the release/package name);
- it should be more stable than bleeding packages;
- we can backport fixes to it (if needed);
- it will be available as a regular release;
- this is the `john-packages` (itself) v0.9.9 release;
- It's based on an upstream tarball release:
  https://github.com/openwall/john/archive/126b2a4814f24f2ff6486e2c050ecb17072be7ba.zip
- There have been over 1500 tree commits since 1.9.0-jumbo-1 was released.

Fix: #710.

BREAKING CHANGES: no longer generate these binaries
- From now on, we have stopped building SSE2 binaries;
- From now on, we have stopped building AVX512F binaries;
- From now on, we will discontinue all builds for 32-bit architectures;
- From now on, we will not create rolling releases.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ name: Docker
       VERSION_NAME:
         description: "The software version name"
         required: true
-        default: "1.9J1+"
+        default: "1.9.1-ce"
       tag:
         description: "The image tag"
         required: true
