packages: give users the option to download a zip
So, stop forcing to use using 7z tools. Avoid the risk of using 7zip.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -60,11 +60,12 @@ macOS_task:
     - source .ci/clean_package.sh
 
     - 7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=128m -ms=on JtR-macArm.7z ./
-    - sha256sum -- JtR-macArm.7z
+    - 7z a -tzip -mx=9 JtR-macArm.zip ./
+    - sha256sum -- JtR-macArm.*
 
   always:
     binaries_artifacts:
-      path: "JtR-macArm.7z"
+      path: "JtR-macArm.*"
 
     id_artifacts:
       path: "Build._ID"
