--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -60,5 +60,6 @@ jobs:
         uses: github/super-linter@92e2606383320f72e6129f8a50d8537cf9c84ed6 # v6.3.1
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_CHECKOV: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
