Docker: add the HEALTHCHECK instruction
Adding the HEALTHCHECK instruction to the container image ensures that
the Docker engine periodically checks the running container instances
against that instruction to ensure that containers are still operational.
Based on the results of the health check, the Docker engine could
terminate containers which are not responding correctly.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -69,3 +69,4 @@ ENV BASE=ubuntu
 ENV VERSION="${VERSION}"
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["best"]
+HEALTHCHECK --interval=1m CMD docker-entrypoint.sh
