--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -61,5 +61,5 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_CHECKOV: false
-          DEFAULT_BRANCH: main
+          DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
