maint: format YAML files using the Prettier
Format using "Prettier - Code formatter" (esbenp.prettier-vscode).

The rule here is: don't think and use the defaults. A `git diff -w`
shows that the commit is safe.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.clusterfuzzlite/project.yaml
+++ b/.clusterfuzzlite/project.yaml
@@ -30,4 +30,4 @@ sanitizers:
 
 architectures:
   - x86_64
-main_repo: 'https://github.com/openwall/john-packages.git'
+main_repo: "https://github.com/openwall/john-packages.git"
