--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -81,9 +81,13 @@ jobs:
           post_comment: 0
           use_magic_file: 1
           report-timing: 1
-          warnings: bad-regex,binary-file,deprecated-feature,large-file,limited-references,no-newline-at-eof,noisy-file,non-alpha-in-dictionary,token-is-substring,unexpected-line-ending,whitespace-in-dictionary,minified-file,unsupported-configuration,no-files-to-check
+          warnings: >
+            bad-regex,binary-file,deprecated-feature,large-file,limited-references,no-newline-at-eof,noisy-file,non-alpha-in-dictionary,
+            token-is-substring,unexpected-line-ending,whitespace-in-dictionary,minified-file,unsupported-configuration,no-files-to-check
           experimental_apply_changes_via_bot: 1
-          use_sarif: ${{ (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1 }}
+          use_sarif: ${{
+            (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1
+            }}
           extra_dictionary_limit: 20
           extra_dictionaries: cspell:software-terms/dict/softwareTerms.txt
             cspell:cpp/src/stdlib-c.txt
