maint: refactor and simplify bash script
In order to improve security and reproducibility, force pinned-dependencies.

Pinned dependencies reduce several security risks:
- they ensure that checking and deployment are all done with the same
  software, simplifying debugging and enabling reproducibility;
- they can help mitigate compromised dependencies from undermining the
  security of the project;
- they are one way to combat dependency confusion attacks.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -99,9 +99,10 @@ parts:
       chmod +x build.sh
 
       ./build.sh PULL
-      craftctl set version="$(./package_version.sh)"
+      craftctl set version="$(cat version.txt)"
 
     override-build: |
+      export PACKAGE_VERSION="$(cat version.txt)"
       ./build.sh
       mkdir -p ../install/etc/bash_completion
       cp run/john.*_completion ../install/etc/bash_completion/
