maint: change FuzzLite script dependency
Avoid downloading `helper.sh`.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.clusterfuzzlite/Dockerfile
+++ b/.clusterfuzzlite/Dockerfile
@@ -34,4 +34,6 @@ RUN apt-get update -qq && \
 
 WORKDIR $SRC/john
 COPY .clusterfuzzlite/build.sh $SRC/
+COPY scripts/helper.sh /upstream/src
+COPY requirements.txt /upstream/src
 HEALTHCHECK NONE
