packages: update package caption and description
Minor adjustments to the description of Flatpak and Snap packages.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -32,7 +32,7 @@ adopt-info: john-the-ripper
 
 license: GPL-2.0
 title: John the Ripper CE Auditing Tool
-summary: John the Ripper password security auditing and recovery tool
+summary: Password security auditing and recovery tool
 description: |
   [Openwall's](https://openwall.com/) John the Ripper (JtR) is a fast password cracker,
   currently available for many flavors of Unix and for Windows. Its primary
