--- a/.clusterfuzzlite/Dockerfile
+++ b/.clusterfuzzlite/Dockerfile
@@ -34,6 +34,5 @@ RUN apt-get update -qq && \
 
 WORKDIR $SRC/john
 COPY .clusterfuzzlite/build.sh $SRC/
-COPY scripts/helper.sh /upstream/src
-COPY requirements.txt /upstream/src
+COPY scripts/helper.sh /upstream
 HEALTHCHECK NONE
