CI: import all Dockerfiles used for CI/CD
It's not the simplest choice, but it makes the code infrastructure more
complete and self-contained.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,3 +30,8 @@ updates:
     directory: /.clusterfuzzlite
     schedule:
       interval: daily
+
+  - package-ecosystem: docker
+    directory: /CI/Dockerfiles
+    schedule:
+      interval: daily
