--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@
 #                                                       | |   | |
 #                                                       |_|   |_|
 #
-# Copyright (c) 2021-2023 Claudio André <claudioandre.br at gmail.com>
+# Copyright (c) 2021-2024 Claudio André <dev at claudioandre.slmail.me>
 #
 # This program comes with ABSOLUTELY NO WARRANTY; express or implied.
 #
@@ -17,11 +17,11 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# GitHub Action to scan a release using VirusTotal
+# GitHub Action to scan using VirusTotal and produce a Provenance file
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Virus Scan
+name: Release Process
 
 "on":
   release:
@@ -58,3 +58,32 @@ jobs:
           files: |
             .7z$
             .zip$
+
+  provenance:
+    name: provenance
+    needs: [virustotal]
+    runs-on: ubuntu-latest
+    permissions:
+      # required to update the release. But it is a security issue.
+      contents: write
+
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
+            objects.githubusercontent.com:443
+            uploads.github.com:443
+
+      - name: Generate provenance for Release
+        uses: philips-labs/slsa-provenance-action@6b2fd198d38ba72fb3cc08fbc52da2ebaef2efad # v0.9.0
+        with:
+          command: generate
+          subcommand: github-release
+          arguments: --artifact-path release-assets --output-path 'Computed-provenance.json' --tag-name ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
