cloud: fix "downloadThenRun not pinned by hash"
Reformat the Dockerfile (this is nitpicking) and use pinned-dependencies.

I don't know if the code analysis tool will be able to detect our fix,
but in practical terms this strategy is safe without the risk of possible
compromised dependencies

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/cloud-tool/Dockerfile
+++ b/cloud-tool/Dockerfile
@@ -8,7 +8,7 @@
 #                                                       | |   | |
 #                                                       |_|   |_|
 #
-# Copyright (c) 2021-2023 Claudio André <claudioandre.br at gmail.com>
+# Copyright (c) 2021-2024 Claudio André <dev at claudioandre.slmail.me>
 #
 # This program comes with ABSOLUTELY NO WARRANTY; express or implied.
 #
@@ -21,21 +21,29 @@
 # More info at https://github.com/openwall/john-packages
 
 FROM ubuntu:latest@sha256:1b8d8ff4777f36f19bfe73ee4df61e3a0b789caeff29caa019539ec7c9a57f95
-LABEL org.opencontainers.image.authors="Claudio André <claudioandre.br at gmail com>"
-LABEL description="IDE automation for John the Ripper (1.0.Cloud Tools)"
+LABEL org.opencontainers.image.authors="Claudio André <dev@claudioandre.slmail.me>"
+LABEL description="Automation for John the Ripper (1.0.Cloud Tools)"
+
+ENV HC_DOWNLOAD_SHA256="cafb01beac341bf2a9ba89793e6dd2468110291adfbb6c62ed11a0cde6c09029"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN apt-get update -qq && \
-    export DEBIAN_FRONTEND="noninteractive" && \
-    apt-get install -y --no-install-recommends wget=* gnupg=* software-properties-common=* ca-certificates=* && \
-    wget --progress=dot:giga -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg && \
-    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list && \
-    apt-add-repository --yes --update ppa:ansible/ansible && \
-    apt-get install -y --no-install-recommends \
-        terraform=* ansible=* \
+RUN apt-get update -qq \
+    && export DEBIAN_FRONTEND="noninteractive" \
+    && apt-get install -y --no-install-recommends \
+        gnupg=* software-properties-common=* ca-certificates=* \
         wget=* git=* nano=* \
+    && wget --progress=dot:giga https://apt.releases.hashicorp.com/gpg -O gpg.key \
+    && echo "$HC_DOWNLOAD_SHA256  gpg.key" | sha256sum -c - \
+    && gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg < gpg.key \
+    && echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+        tee /etc/apt/sources.list.d/hashicorp.list \
+    && apt-add-repository --yes --update ppa:ansible/ansible \
+    && apt-get install -y --no-install-recommends \
+        terraform=* ansible=* \
     && useradd -U -m usr \
-    # Clean the image
+# ==================================================================
+# Clean up the image (shrink the Docker image)
+# ------------------------------------------------------------------
     && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
