--- a/IDE/.devcontainer/devcontainer.json
+++ b/IDE/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
 		"jeff-hykin.better-cpp-syntax",
 		"ms-vscode.cpptools-extension-pack",
 		"ms-vscode.cpptools-themes",
-		"ms-vscode.cpptools"
+		"ms-vscode.cpptools",
+		"sonarsource.sonarlint-vscode"
 	]
 }
